--- a/index.html
+++ b/index.html
@@ -35,6 +35,49 @@
     <title>Helados | Kosten</title>
   </head>
   <body>
+    <!--  Header  -->
+    <header class="seccion-oscura">
+      <!--  Barra de Navegacion  -->
+      <nav class="navbar navbar-expand-md">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Helados | Kosten</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar-toggler"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar-toggler">
+            <!--  Lista Desordenada  -->
+            <ul
+              class="navbar-nav ms-auto d-flex justify-content-between aling-items-center"
+            >
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/encargo.html">Encargo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/sabores.html">Sabores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/ubicacion.html">Ubicacion</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
     <!--  Bootstrap Link JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
