--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
         </div>
       </nav>
     </header>
-
+    <!--  Main  -->
+    <main>
+      <!--  Seccion de Introduccion  -->
+      <section class="introduccion seccion-verde">
+        <div class="d-flex contenedor-intro">
+          <div class="seccion-presentacion pb-5">
+            <h1 class="seccion-titulo text-center">
+              Los mejores helados de la zona
+            </h1>
+            <h2 class="text-center">
+              ¡Nunca pensamos que nuestra frialdad te enloqueceria!<br />Helados
+              adictivos es lo que hacemos.
+            </h2>
+          </div>
+          <div class="flecha">
+            <img
+              class="img-flecha"
+              src="imgs/flecha.png"
+              alt="imagen de una flecha"
+            />
+          </div>
+          <div class="d-flex justify-content-start">
+            <img
+              class="img-intro border border-4 rounded-4"
+              src="imgs/helado-section1.jpg"
+              alt="imagen de un helado"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
     <!--  Bootstrap Link JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
