--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
           </div>
         </div>
       </section>
+      <!--  Sobre la Empresa  -->
+      <section class="empresa seccion-clara">
+        <div class="contenedor">
+          <h2 class="seccion-titulo">
+            Conoce como trabajamos en nuestra empresa.
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            vel molestias modi, consectetur cumque ipsum autem consequuntur
+            corporis natus maiores. Labore velit officiis quis nesciunt
+            consectetur perferendis nam necessitatibus nobis dicta. Cupiditate
+            cumque commodi dolores quidem odit dolorem, obcaecati voluptas.
+          </p>
+        </div>
+      </section>
     </main>
     <!--  Bootstrap Link JS  -->
     <script
