--- a/index.html
+++ b/index.html
@@ -122,6 +122,59 @@
           </p>
         </div>
       </section>
+      <!--  Seccion de Explicacion  -->
+      <section class="explicacion seccion-verde">
+        <div class="d-flex">
+          <div class="row">
+            <div
+              class="descripcion col-12 col-xl-5 text-center d-flex flex-column justify-content-center"
+            >
+              <h2 class="py-3">¿Como hacemos nuestros helados?</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                esse architecto, quos magnam ipsum sed odio, doloremque qui
+                earum omnis sit perspiciatis ab vel molestiae voluptatum fugiat
+                accusantium nisi saepe voluptates aspernatur? Vel earum
+                exercitationem, alias excepturi voluptatibus id delectus.
+              </p>
+            </div>
+            <div
+              class="col-12 col-xl-4 d-flex aling-items-center justify-content-center"
+            >
+              <img
+                class="img-intro border border-4 rounded-4"
+                src="imgs/helado-section3.jpg"
+                alt=""
+              />
+            </div>
+            <div
+              class="descripcion-lista col-12 col-xl-3 text-left d-flex flex-column justify-content-center"
+            >
+              <h2 class="py-3">Asi lo hacemos</h2>
+              <div class="iconos-texto">
+                <i class="bi bi-person-check"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="iconos-texto">
+                <i class="bi bi-bookmark-check"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="iconos-texto">
+                <i class="bi bi-tree"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="iconos-texto">
+                <i class="bi bi-thermometer-high"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="iconos-texto">
+                <i class="bi bi-database-fill-check"></i>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--  Bootstrap Link JS  -->
     <script
