--- a/index.html
+++ b/index.html
@@ -175,6 +175,90 @@
           </div>
         </div>
       </section>
+      <!--  Carrusel | Imagenes  -->
+      <section class="helados seccion-clara">
+        <h1 class="seccion-titulo">Carrusel de helados</h1>
+        <h2 class="seccion-descripcion">
+          Estos son algunos de nuestros helados
+        </h2>
+        <!--  Carrusel  -->
+        <div id="helados-carrusel" class="carousel carousel-dark slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel1.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel2.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel3.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel4.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel5.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div class="container">
+                <img
+                  src="imgs/carrusel6.jpg"
+                  alt="Foto de un helado"
+                  class="helado-imagen"
+                />
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#helados-carrusel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#helados-carrusel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </section>
     </main>
     <!--  Bootstrap Link JS  -->
     <script
