--- a/index.html
+++ b/index.html
@@ -260,6 +260,56 @@
         </div>
       </section>
     </main>
+    <!--  Pie de pagina (footer)  -->
+    <footer
+      class="seccion-oscura d-flex flex-column aling-items-center justify-content-center"
+    >
+      <p class="footer-texto text-center">
+        Atrevete a probarnos.<br />Dale, no te quedes con las ganas de uno.
+      </p>
+      <div
+        class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-content-center"
+      >
+        <a
+          href="https://twitter.com/twitter?lang=es"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-twitter"></i>
+        </a>
+        <a
+          href="https://es-la.facebook.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a
+          href="https://www.messenger.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-messenger"></i>
+        </a>
+        <a
+          href="mailto:gabykosten@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-envelope"></i>
+        </a>
+      </div>
+      <div class="derechos-de-autor">
+        Creado por Luis Gabriel Sanchez (2023) &#169;
+      </div>
+    </footer>
     <!--  Bootstrap Link JS  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
