--- a/pages/encargo.html
+++ b/pages/encargo.html
@@ -75,6 +75,99 @@
         </div>
       </nav>
     </header>
+    <!--  Main  -->
+    <main>
+      <section id="intro-section" class="seccion-clara pb-5">
+        <div class="container">
+          <div class="row text-center">
+            <!--  Titulo  -->
+            <h1 class="display-2">Encargos</h1>
+            <p class="lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              quod nisi sunt quaerat perspiciatis!
+            </p>
+            <br />
+            <hr />
+          </div>
+          <!--  Comienza el Formulario  -->
+          <div class="row text-white seccion-verde">
+            <div class="col-12 col-lg-6 gradient shadow p-3">
+              <div class="cta-info w-100">
+                <h2 class="display-5 fw-bold">Contactate con nosotros</h2>
+                <p class="lh-lg">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut
+                  unde architecto adipisci nulla incidunt quod quam laudantium,
+                  non in recusandae pariatur debitis.
+                </p>
+                <h2 class="display-8">Asi nos califican:</h2>
+                <ul>
+                  <li>Seguridad.</li>
+                  <li>Confiabilidad.</li>
+                  <li>Calidad.</li>
+                  <li>Velocidad.</li>
+                  <li>Accesibilidad.</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6 shadow p-3 seccion-clara">
+              <div class="form w-100 pb-2">
+                <h4 class="display-3--title text-black mb-5">
+                  Envíenos un mensaje
+                </h4>
+                <form action="" class="row">
+                  <div class="col-lg-6 col-md-6 mb-3">
+                    <input
+                      type="text"
+                      name="firstName"
+                      id="firstName"
+                      class="form-control shadow form-control-lg seccion-clara"
+                      placeholder="Nombre"
+                    />
+                  </div>
+                  <div class="col-lg-6 col-md-6 mb-3">
+                    <input
+                      type="text"
+                      name="lastName"
+                      id="lastName"
+                      class="form-control shadow form-control-lg seccion-clara"
+                      placeholder="Apellido"
+                    />
+                  </div>
+                  <div class="col-lg-12 mb-3">
+                    <input
+                      type="email"
+                      name="email"
+                      id="email"
+                      class="form-control shadow form-control-lg seccion-clara"
+                      placeholder="Correo electrónico"
+                    />
+                  </div>
+                  <div class="col-lg-12 mb-3">
+                    <textarea
+                      name="message"
+                      id="message"
+                      cols="30"
+                      rows="8"
+                      class="form-control shadow form-control-lg seccion-clara"
+                      placeholder="Hace tu pedido."
+                    ></textarea>
+                  </div>
+                  <div class="text-center d-grid mt-1">
+                    <button
+                      class="btn btn-primary rounded-pill pt-3 pb-3"
+                      type="button"
+                    >
+                      <i class="fas fa-hand-point-right"></i>
+                      Enviar
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!--  Pie de pagina (footer)  -->
     <footer
       class="seccion-oscura d-flex flex-column aling-items-center justify-content-center"
