--- a/pages/sabores.html
+++ b/pages/sabores.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Desde 2008 nos encontramos brindando los más deliciosos helados artesanales. Contamos con 15 años de experiencia en la fabricación de cremas heladas con la típica tradición italiana, con delicada consistencia y realizadas utilizando materias primas naturales de altísima calidad. Elaborando nuestros exquisitos helados sin colorantes ni concervantes."
+    />
+    <meta
+      name="keywords"
+      content="heladeria, capital, palermo, avellaneda parque patricios,helados artesanales"
+    />
     <!--  Bootstrap Link  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
